--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       
     <br>
     
-    <textarea rows="4" cols="50" name="comment" form="usrform">
+    <textarea rows="4" cols="50" name="comment" form="usrform" style="width:20%">
       Write your message </textarea>
        <br><br>
       <div class="form-check">
