--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
   <body>
     <div class="container-fluid">
-      <h2>regestration form </h2>
+      <h2 class="text-capitalize">regestration form </h2>
     <div class="group">
       <div class="form">
    <div class="form-group row">
