--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         document.getElementById("gridRadios1").checked = true;
       }
       function myText() {
-      document.getElementById("myTextarea").select();
+      document.getElementById("myTextarea").value="Thank you for your services";
     }
     function age(){
       document.getElementById("mySelect").value=20;
@@ -123,7 +123,7 @@
     <br>
 
     Write your message:<br>
-    <textarea id="myTextarea">Thank you for your services</textarea>
+    <textarea id="myTextarea"></textarea>
      <!-- <textarea rows="4" cols="50" name="comment" form="usrform" style="width:70%">
       Write your message </textarea> -->
        <br><br>
