--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       
     <script>
       function myFunction() {
-        document.getElementById("myText").value = "Leila Fortune";
+        document.getElementById("myEmail").value = "Leila Fortune";
       }
 
       function myFunction2() {
-        document.getElementById("myEmail").value = "Leila@gmail.com";
+        document.getElementById("myText").value = "Leila@gmail.com";
       }
 
       function check() {
@@ -28,7 +28,7 @@
         document.getElementById("gridRadios1").checked = true;
       }
       function myText() {
-      document.getElementById("myTextarea").value="Thank you for your services";
+      document.getElementById("myTextarea").value="Thank you for using our services";
     }
     function age(){
       document.getElementById("mySelect").value=20;
@@ -123,7 +123,7 @@
     <br>
 
     Write your message:<br>
-    <textarea id="myTextarea"></textarea>
+    <textarea id="myTextarea"> Highly welcome our service</textarea>
      <!-- <textarea rows="4" cols="50" name="comment" form="usrform" style="width:70%">
       Write your message </textarea> -->
        <br><br>
