--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <br>
 
     Write your message:<br>
-    <textarea id="myTextarea"> Highly welcome our service</textarea>
+    <textarea id="myTextarea"> Highly welcome to our service</textarea>
      <!-- <textarea rows="4" cols="50" name="comment" form="usrform" style="width:70%">
       Write your message </textarea> -->
        <br><br>
