--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         form.inputbox.value = "leila@gmail.com"
     }
   
-    function WriteText (form1) {
-        form.inputbox.value = "Leila"
+    function readText (form1) {
+        form.inputbox1.value = "Leila"
     }
  </script>
  <body>
@@ -70,10 +70,10 @@
         <label for="inputUsername" class="col-sm-2 col-form-label"> User name: <input type="email" id="inputbox" value=""></label>
        </div> 
 
-       <div class="form-group row">
+       <!-- <div class="form-group row">
         <label for="inputemail" class="col-sm-2 col-form-label"> E-mail:<input type="text" id="inputbox1"value=""></label>
       
-           </div>
+           </div> -->
 
            <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">Password:<input type="password" id="Password"value=""></label>
